interim commit - can now load list of scouts on startup

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hello jQuery</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="/js/main.js"></script>
-    </head>
+  <head>
+    <title>Scoutmaster</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-    <body>
-        <div>
-            <p class="greeting-id">The ID is </p>
-        </div>
-    </body>
+    <!-- Include one of jTable styles. -->
+    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/blue/jtable.css" rel="stylesheet" type="text/css" />
+ 
+    <!-- Include jTable script file. -->
+    <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
+
+    <script src="/js/main.js"></script>
+  </head>
+
+  <body>
+    <div>
+      <p class="greeting-id">The ID is </p>
+    </div>
+    <div id="ScoutTableContainer"></div>
+  </body>
 </html>
