ui for active scouts

--- a/code/java/troop/static/client/activeScouts.html
+++ b/code/java/troop/static/client/activeScouts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Scoutmaster - Main</title>
+    <title>Scoutmaster - Active Scouts</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -12,11 +12,11 @@
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
-    <script src="/js/main.js"></script>
+    <script src="/js/activeScouts.js"></script>
   </head>
 
   <body>
-    Click <a href="/client/activeScouts.html">here for the active scouts page</a>.
+    Click <a href="/client/index.html">here for the main page</a>.
     <div id="ScoutTableContainer"></div>
   </body>
 </html>
