--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    Click <a href="/client/activeScouts.html">here for the active scouts page</a>.
+    Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/>
     <div id="ScoutTableContainer"></div>
   </body>
 </html>
