change main.js to scouts.js

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -12,7 +12,7 @@
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
-    <script src="/js/main.js"></script>
+    <script src="/js/scouts.js"></script>
     <!-- <script src="/js/customers.js"></script>
     <script src="/js/cars.js"></script>
     <script src="/js/phoneNumbers.js"></script> -->
