--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -21,7 +21,7 @@
   <body>
     Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/>
     <div id="ScoutTableContainer"></div>
-    <!-- <div id="CustomerTableContainer"></div>
-    <div id="CarTableContainer"></div> -->
+    <div id="CustomerTableContainer"></div>
+    <div id="CarTableContainer"></div>
   </body>
 </html>
