--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -13,8 +13,8 @@
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
     <script src="/js/scouts.js"></script>
-    <!-- <script src="/js/customers.js"></script>
-    <script src="/js/cars.js"></script>
+    <script src="/js/customers.js"></script>
+    <!-- <script src="/js/cars.js"></script>
     <script src="/js/phoneNumbers.js"></script> -->
   </head>
 
@@ -22,6 +22,7 @@
     Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/>
     <div id="ScoutTableContainer"></div>
     <div id="CustomerTableContainer"></div>
+    <div id="PhoneTableContainer"></div>
     <div id="CarTableContainer"></div>
   </body>
 </html>
