comment out active scouts link

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/>
+    <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
     <div id="CustomerTableContainer"></div>
     <div id="PhoneTableContainer"></div>
