--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -14,6 +14,7 @@
 
     <script src="/js/scouts.js"></script>
     <script src="/js/customers.js"></script>
+    <script src="/js/phoneNumbers.js"></script>
     <!-- <script src="/js/cars.js"></script>
     <script src="/js/phoneNumbers.js"></script> -->
   </head>
@@ -24,5 +25,5 @@
     <div id="CustomerTableContainer"></div>
     <div id="PhoneTableContainer"></div>
     <div id="CarTableContainer"></div>
-  </body>
+  </body> 
 </html>
