--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -15,8 +15,7 @@
     <script src="/js/scouts.js"></script>
     <script src="/js/customers.js"></script>
     <script src="/js/phoneNumbers.js"></script>
-    <!-- <script src="/js/cars.js"></script>
-    <script src="/js/phoneNumbers.js"></script> -->
+    <script src="/js/cars.js"></script>
   </head>
 
   <body>
