--- a/code/java/troop/static/index.html
+++ b/code/java/troop/static/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <script>
-    location.href='/client/index.html';
-    </script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
-
   <body>
-    Redirecting..." 
+    <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
+    <h1 style="text-align: center; position: relative; bottom: 100%">Hot Wheels Auto Repair</h1>
+    <div style="text-align: center; position: relative; bottom: 90%;">
+        <button class="btn btn-danger" style="position: relative; bottom: 100%; width: 10%; height: 7%;">Enter</button>
+    </div>
   </body>
 </html>
