--- a/code/java/troop/static/index.html
+++ b/code/java/troop/static/index.html
@@ -7,7 +7,7 @@
     <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
     <h1 style="text-align: center; position: relative; bottom: 100%">Hot Wheels Auto Repair</h1>
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button class="btn btn-danger" style="position: relative; bottom: 100%; width: 10%; height: 7%;">Enter</button>
+        <button class="btn btn-danger" onclick="client/index.html" style="position: relative; bottom: 100%; width: 10%; height: 7%;">Access Data</button>
     </div>
   </body>
 </html>
