--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -1,28 +1,15 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>Scoutmaster - Main</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
-    <!-- Include one of jTable styles. -->
-    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/blue/jtable.css" rel="stylesheet" type="text/css" />
- 
-    <!-- Include jTable script file. -->
-    <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
-
-    <script src="/js/scouts.js"></script>
-    <script src="/js/customers.js"></script>
-    <script src="/js/phoneNumbers.js"></script>
-    <script src="/js/cars.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
-
-  <body>
-    <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
-    <!-- <div id="ScoutTableContainer"></div> -->
-    <div id="CustomerTableContainer"></div>
-    <div id="PhoneTableContainer"></div>
-    <div id="CarTableContainer"></div>
-  </body> 
+  <body style="margin: 0; height: 100%; overflow: hidden">
+    <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
+    <h1 style="text-align: center; font-family: 'Raleway',sans-serif; font-size: 50px; position: relative; 
+    bottom: 100%; top: 20">Hot Wheels Auto Repair</h1>
+    <div style="text-align: center; position: relative; bottom: 90%;">
+        <button class="btn btn-danger" style="position: relative; bottom: 100%; width: 10%; height: 7%;">
+            <a href="webapp.html">Access Data</a></button>
+    </div>
+  </body>
 </html>
