--- a/code/java/troop/static/client/webapp.html
+++ b/code/java/troop/static/client/webapp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Scoutmaster - Active Scouts</title>
+    <title>Scoutmaster - Main</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -12,20 +12,17 @@
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
-    <script src="/js/activeScouts.js"></script>
+    <script src="/js/scouts.js"></script>
+    <script src="/js/customers.js"></script>
+    <script src="/js/phoneNumbers.js"></script>
+    <script src="/js/cars.js"></script>
   </head>
 
   <body>
-    Click <a href="/client/webapp.html">here for the main page</a>.<br/><br/>
-
-    List Scouts who have been on a trip in the past: 
-    <select id="days" onchange="fetchActiveScouts()">
-      <option value="7">Week
-      <option value="30">Month
-      <option value="180">6 Months
-      <option value="365"> Year
-    </select>
-    
-    <div id="ScoutTableContainer"></div>
-  </body>
+    <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
+    <!-- <div id="ScoutTableContainer"></div> -->
+    <div id="CustomerTableContainer"></div>
+    <div id="PhoneTableContainer"></div>
+    <div id="CarTableContainer"></div>
+  </body> 
 </html>
