--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -2,11 +2,13 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  </head>
-  <body style="margin: 0; height: 100%; overflow: hidden">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
+</head>
+  <body scroll="no" style="margin: 0; height: 100%; overflow: hidden">
     <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
-    <h1 style="text-align: center; font-family: 'Raleway',sans-serif; font-size: 50px; position: relative; 
-    bottom: 100%; top: 20">Hot Wheels Auto Repair</h1>
+    <h1 style="text-align: center; font-family: 'Goudy Bookletter 1911', Georgia, Times, serif; font-size: 50px; position: relative; bottom: 100%; top: 20">
+        Hot Wheels Auto Repair</h1>
     <div style="text-align: center; position: relative; bottom: 90%;">
         <button class="btn btn-danger" style="position: relative; bottom: 100%; width: 10%; height: 7%;">
             <a href="webapp.html">Access Data</a></button>
