link button to web app

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -7,11 +7,13 @@
 </head>
   <body scroll="no" style="margin: 0; height: 100%; overflow: hidden">
     <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
-    <h1 style="text-align: center; font-family: 'Goudy Bookletter 1911', Georgia, Times, serif; font-size: 50px; position: relative; bottom: 100%; top: 20">
+    <h1 style="text-align: center; font-family: 'Goudy Bookletter 1911', Georgia, Times, serif; 
+    font-size: 50px; position: relative; bottom: 100%; top: 20">
         Hot Wheels Auto Repair</h1>
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button class="btn btn-danger" style="position: relative; bottom: 100%; width: 10%; height: 7%;">
-            <a href="webapp.html">Access Data</a></button>
+        <button class="btn btn-danger" onclick="location.href='webapp.html'" style="position: relative; 
+        bottom: 100%; width: 10%; height: 7%;">
+            Access Data</button>
     </div>
   </body>
 </html>
