--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -11,7 +11,7 @@
     font-size: 50px; position: relative; bottom: 100%;">
         Hot Wheels Auto Repair</h1>
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button id="access" class="btn btn-danger" onclick="window.location.href='webapp.html';" style="position: relative; 
+        <button class="btn btn-danger" onclick="window.location.href='/webapp.html';" style="position: relative; 
         bottom: 100%; width: 10%; height: 7%;">
             Access Data</button>
     </div>
