--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -11,9 +11,11 @@
     font-size: 50px; position: relative; bottom: 100%;">
         Hot Wheels Auto Repair</h1>
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button class="btn btn-danger" onclick="window.location.href='/webapp.html';" style="position: relative; 
-        bottom: 100%; width: 10%; height: 7%;">
-            Access Data</button>
+        <form method="get" action="/webapp.html">
+            <button type="submit" class="btn btn-danger" onclick="window.location.href='/webapp.html';" style="position: relative; 
+            bottom: 100%; width: 10%; height: 7%;">
+                Access Data</button>
+        </form>
     </div>
   </body>
 </html>
