--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -12,7 +12,7 @@
         Hot Wheels Auto Repair</h1>
     <div style="text-align: center; position: relative; bottom: 90%;">
         <form method="get" action="/webapp.html">
-            <button type="submit" class="btn btn-danger" onclick="window.location.href='/webapp.html';" style="position: relative; 
+            <button type="submit" class="btn btn-danger" style="position: relative; 
             bottom: 100%; width: 10%; height: 7%;">
                 Access Data</button>
         </form>
