revert back to normal webpage

--- a/code/java/troop/static/client/activeScouts.html
+++ b/code/java/troop/static/client/activeScouts.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    Click <a href="/client/webapp.html">here for the main page</a>.<br/><br/>
+    Click <a href="/client/index.html">here for the main page</a>.<br/><br/>
 
     List Scouts who have been on a trip in the past: 
     <select id="days" onchange="fetchActiveScouts()">
