--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -1,4 +1,43 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Hot Wheels Auto Repair</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
+
+    <!-- Include one of jTable styles. -->
+    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/blue/jtable.css" rel="stylesheet" type="text/css" />
+ 
+    <!-- Include jTable script file. -->
+    <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
+
+    <script src="/js/scouts.js"></script>
+    <script src="/js/customers.js"></script>
+    <script src="/js/phoneNumbers.js"></script>
+    <script src="/js/cars.js"></script>
+  </head>
+
+  <body>
+    <img src="hotwheels.png" style="width: 10%; height: 10%; top: 10%"/>
+    <h1 style="text-align: center; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
+    font-size: 50px; position: relative; bottom: 100%;">
+        Auto Repair</h1>
+    <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
+    <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
+    <!-- <div id="ScoutTableContainer"></div> -->
+    <div style="margin: 10px;" id="CustomerTableContainer"></div>
+    <div style="margin: 10px;" id="PhoneTableContainer"></div>
+    <div style="margin: 10px;" id="CarTableContainer"></div>
+  </body> 
+</html>
+
+
+
+<!-- <html>
   <head>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -18,4 +57,4 @@
         </form>
     </div>
   </body>
-</html>
+</html> -->
