--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -22,16 +22,17 @@
   </head>
 
   <body>
-    <img src="hotwheels.png" style="width: 10%; height: 10%; top: 10%"/>
+    <img src="hotwheels.png" style="width: 15%; height: 15%; top: 10%;  margin-left: auto;
+    margin-right: auto;"/>
     <h1 style="text-align: center; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 50px; position: relative; bottom: 100%;">
-        Auto Repair</h1>
-    <img src="LamboHeader.jpg" style="width: 100%; height: 100%;"/>
+        AUTO REPAIR</h1>
+    <img src="autoshop.jpg" style="width: 100%; height: 100%;"/>
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
-    <div style="margin: 10px;" id="CustomerTableContainer"></div>
-    <div style="margin: 10px;" id="PhoneTableContainer"></div>
-    <div style="margin: 10px;" id="CarTableContainer"></div>
+    <div style="margin: 15px; position: relative" id="CustomerTableContainer"></div>
+    <div style="margin: 15px;" id="PhoneTableContainer"></div>
+    <div style="margin: 15px;" id="CarTableContainer"></div>
   </body> 
 </html>
 
