--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html style=" background: url(LamboHeader.jpg) no-repeat center center fixed;-webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover; ">
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">
   <head>
     <title>Hot Wheels Auto Repair</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -25,15 +25,14 @@ background-size: cover; ">
   </head>
 
   <body>
-    <!-- <img src="LamboHeader.jpg" style="width: 15%; height: 15%; top: 10%;  margin-left: auto;
-    margin-right: auto;"/> -->
-    <h1 style="text-align: center; color: white; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
+    <img src="hotwheels.png" style="width: 15%; height: 15%; top: 10%;  margin-left: auto;
+    margin-right: auto;"/>
+    <h1 style="text-align: center; color: rgb(3, 29, 43); font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 50px; position: relative; bottom: 100%;">
         AUTO REPAIR</h1>
-    <img src="autoshop.jpg" style="width: 100%; height: 100%;"/>
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
-    <div style="margin: 15px;" id="CustomerTableContainer"></div>
+    <div style="margin: 15px; position: relative" id="CustomerTableContainer"></div>
     <div style="margin: 15px;" id="PhoneTableContainer"></div>
     <div style="margin: 15px;" id="CarTableContainer"></div>
   </body> 
