--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <img src="hotwheels.png" style="width: 15%; height: 15%; top: 10%;  margin-left: auto;
+    <img src="hotwheels.png" style="display:block; margin-left: auto;
     margin-right: auto;"/>
     <h1 style="text-align: center; color: rgb(3, 29, 43); font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 50px; position: relative; bottom: 100%;">
