--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -26,8 +26,8 @@
 
   <body>
     <img src="hotwheels.png" style="display:block; margin-left: auto;
-    margin-right: auto;"/>
-    <h1 style="text-align: center; color: rgb(3, 29, 43); font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
+    margin-right: auto; height: 50px; width: 75px;"/>
+    <h1 style="text-align: center; color: black; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 50px; position: relative; bottom: 100%;">
         AUTO REPAIR</h1>
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
