--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <img src="hotwheels.png" style="display:block; margin-left: auto;
-    margin-right: auto; height: 50px; width: 75px;"/>
+    margin-right: auto; height: 10%; width: 10%;"/>
     <h1 style="text-align: center; color: black; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 50px; position: relative; bottom: 100%;">
         AUTO REPAIR</h1>
