test size again

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -26,9 +26,9 @@
 
   <body>
     <img src="hotwheels.png" style="display:block; margin-left: auto;
-    margin-right: auto; height: 10%; width: 10%;"/>
+    margin-right: auto; height: 22%; width: 22%;"/>
     <h1 style="text-align: center; color: black; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
-    font-size: 50px; position: relative; bottom: 100%;">
+    font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
