--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -32,9 +32,9 @@
         AUTO REPAIR</h1>
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
-    <div style="margin: 15px; position: relative" id="CustomerTableContainer"></div>
-    <div style="margin: 15px;" id="PhoneTableContainer"></div>
-    <div style="margin: 15px;" id="CarTableContainer"></div>
+    <div style="margin: 30px; position: relative" id="CustomerTableContainer"></div>
+    <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div>
+    <div style="margin: 30px; position: relative" id="CarTableContainer"></div>
   </body> 
 </html>
 
