--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -11,6 +11,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Include one of jTable styles. -->
     <link href="http://www.jtable.org/Scripts/jtable/themes/metro/blue/jtable.css" rel="stylesheet" type="text/css" />
@@ -27,9 +28,14 @@
   <body>
     <img src="hotwheels.png" style="display:block; margin-left: auto;
     margin-right: auto; height: 22%; width: 22%;"/>
+    
     <h1 style="text-align: center; color: black; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
+
+    <a href="/client/allRecords.html" class="btn btn-danger" style="position: relative;
+     bottom: 100%; width: 10%; height: 7%;"></a>
+
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
     <div style="margin: 30px; position: relative" id="CustomerTableContainer"></div>
