--- a/code/java/troop/static/client/allRecords.html
+++ b/code/java/troop/static/client/allRecords.html
@@ -25,11 +25,15 @@
   <body>
     <img src="hotwheels.png" style="display:block; margin-left: auto;
     margin-right: auto; height: 22%; width: 22%;"/>
+
     <h1 style="text-align: center; color: black; font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif; 
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
-    <a href="/client/index.html" class="btn btn-danger" style="position: relative;
-     bottom: 100%; width: 10%; height: 7%;">BACK TO HOME</a>
+
+    <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/allRecords.html';"
+    style="display: block; margin-left: auto; margin-right: auto; position: relative;
+            width: 15%; height: 20%;">ACCESS ALL DATA</button>
+
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
     <div style="margin: 30px; position: relative" id="CustomerTableContainer"></div>
