--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -33,9 +33,9 @@
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
 
-    <a href="/client/allRecords.html" class="btn btn-danger" type="submit" style="display: block;
-        margin-left: auto; margin-right: auto; position: relative;
-         width: 15%; height: 20%;">ACCESS ALL DATA</a>
+    <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/allRecords.html';"
+    style="display: block; margin-left: auto; margin-right: auto; position: relative;
+         width: 15%; height: 20%;">ACCESS ALL DATA</button>
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
