place button in div

--- a/code/java/troop/static/client/allRecords.html
+++ b/code/java/troop/static/client/allRecords.html
@@ -30,9 +30,15 @@
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
 
-    <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/allRecords.html';"
-    style="display: block; margin-left: auto; margin-right: auto; position: relative;
-            width: 15%; height: 20%;">ACCESS ALL DATA</button>
+        <div style="text-align: center; position: relative; bottom: 90%;">
+
+            <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/index.html';"
+            style="display: block; margin-left: auto; margin-right: auto; position: relative;
+                    width: 15%; height: 20%; bottom: 100%;">BACK TO HOME</button>
+    
+            <!-- <button class="btn btn-danger" 
+            style="position: relative; bottom: 100%; width: 10%; height: 7%;">Enter</button> -->
+        </div>
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
