--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -33,15 +33,11 @@
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
 
-    <div style="text-align: center; position: relative; bottom: 90%;">
-
+    <!-- <div style="text-align: center; position: relative; bottom: 90%;">
         <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/allRecords.html';"
         style="display: block; margin-left: auto; margin-right: auto; position: relative;
                 width: 15%; height: 20%; bottom: 100%;">ACCESS ALL DATA</button>
-
-        <!-- <button class="btn btn-danger" 
-        style="position: relative; bottom: 100%; width: 10%; height: 7%;">Enter</button> -->
-    </div>
+    </div> -->
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
