--- a/code/java/troop/static/client/allRecords.html
+++ b/code/java/troop/static/client/allRecords.html
@@ -19,6 +19,30 @@
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
     <script src="/js/allRecords.js"></script>
+    <style>
+            .btn {
+                display: inline-block;
+                padding: 15px 25px;
+                font-size: 15px;
+                cursor: pointer;
+                text-align: center;
+                text-decoration: none;
+                outline: none;
+                color: #fff;
+                background-color: rgb(201, 58, 26);
+                border: none;
+                border-radius: 15px;
+                box-shadow: 0 5px black;
+            }
+
+            .btn:hover {background-color: #9f0e0e}
+
+            .btn:active {
+                background-color: #9f0e0e;
+                box-shadow: 0 2px black;
+                transform: translateY(4px);
+            }
+    </style>
   </head>
 
   <body>
@@ -30,9 +54,9 @@
         AUTO REPAIR</h1>
 
         <div style="text-align: center; position: relative; bottom: 90%;">
-            <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/index.html';"
-            style="display: block; margin-left: auto; margin-right: auto; position: relative;
-                    width: 15%; height: 20%; bottom: 100%;">BACK TO HOME</button>
+            <button  class="btn" type="submit" onclick="window.location.href='/client/index.html';"
+            style="margin-left: auto; margin-right: auto; position: relative;
+                    width: 15%; top: -27px; height: 7%; bottom: 100%;">BACK TO HOME</button>
         </div>
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
