--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -22,6 +22,31 @@
     <script src="/js/customers.js"></script>
     <script src="/js/phoneNumbers.js"></script>
     <script src="/js/cars.js"></script>
+
+    <style>
+            .btn {
+                display: inline-block;
+                padding: 15px 25px;
+                font-size: 15px;
+                cursor: pointer;
+                text-align: center;
+                text-decoration: none;
+                outline: none;
+                color: #fff;
+                background-color: rgb(201, 58, 26);
+                border: none;
+                border-radius: 15px;
+                box-shadow: 0 5px black;
+            }
+
+            .btn:hover {background-color: #9f0e0e}
+
+            .btn:active {
+                background-color: #9f0e0e;
+                box-shadow: 0 2px black;
+                transform: translateY(4px);
+            }
+    </style>
   </head>
 
   <body>
@@ -33,9 +58,9 @@
         AUTO REPAIR</h1>
 
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button  class="btn btn-danger" type="submit" onclick="window.location.href='/client/allRecords.html';"
-        style="display: block; margin-left: auto; margin-right: auto; position: relative;
-                width: 15%; height: 20%; bottom: 100%;">ACCESS ALL DATA</button>
+        <button  class="btn" type="submit" onclick="window.location.href='/client/allRecords.html';"
+        style="margin-left: auto; margin-right: auto; position: relative;
+                width: 15%; top: -27px; height: 7%; bottom: 100%;">ACCESS ALL DATA</button>
     </div>
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
