--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -28,6 +28,7 @@
                 display: inline-block;
                 padding: 15px 25px;
                 font-size: 15px;
+                font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif;
                 cursor: pointer;
                 text-align: center;
                 text-decoration: none;
