--- a/code/java/troop/static/client/allRecords.html
+++ b/code/java/troop/static/client/allRecords.html
@@ -62,7 +62,7 @@
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
-    <div style="margin: 30px; position: relative" id="CustomerTableContainer"></div>
+    <div style="margin: 30px; position: relative" id="AllTableContainer"></div>
   </body> 
 </html>
 
