--- a/code/java/troop/static/client/allRecords.html
+++ b/code/java/troop/static/client/allRecords.html
@@ -19,7 +19,7 @@
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
     <script src="/js/allRecords.js"></script>
-    <style>
+    <!-- <style>
             .btn {
                 display: inline-block;
                 padding: 15px 25px;
@@ -43,7 +43,7 @@
                 box-shadow: 0 2px black;
                 transform: translateY(4px);
             }
-    </style>
+    </style> -->
   </head>
 
   <body>
@@ -54,11 +54,11 @@
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
 
-        <div style="text-align: center; position: relative; bottom: 90%;">
+        <!-- <div style="text-align: center; position: relative; bottom: 90%;">
             <button  class="btn" type="submit" onclick="window.location.href='/client/index.html';"
             style="margin-left: auto; margin-right: auto; position: relative;
                     width: 15%; top: -20px; height: 7%; bottom: 100%;">BACK TO HOME</button>
-        </div>
+        </div> -->
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
