--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -23,7 +23,7 @@
     <script src="/js/phoneNumbers.js"></script>
     <script src="/js/cars.js"></script>
 
-    <style>
+    <!-- <style>
             .btn {
                 display: inline-block;
                 padding: 15px 25px;
@@ -47,7 +47,7 @@
                 box-shadow: 0 2px black;
                 transform: translateY(4px);
             }
-    </style>
+    </style> -->
   </head>
 
   <body>
@@ -58,11 +58,11 @@
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
 
-    <div style="text-align: center; position: relative; bottom: 90%;">
+    <!-- <div style="text-align: center; position: relative; bottom: 90%;">
         <button  class="btn" type="submit" onclick="window.location.href='/client/allRecords.html';"
         style="margin-left: auto; margin-right: auto; position: relative;
                 width: 15%; top: -20px; height: 7%; bottom: 100%;">ACCESS ALL DATA</button>
-    </div>
+    </div> -->
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
