--- a/code/java/troop/static/client/allRecords.html
+++ b/code/java/troop/static/client/allRecords.html
@@ -18,32 +18,34 @@
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
-    <script src="/js/allRecords.js"></script>
-    <!-- <style>
+    <!-- <script src="/js/allRecords.js"></script> -->
+    <!-- #9f0e0e -->
+    <style>
             .btn {
                 display: inline-block;
                 padding: 15px 25px;
                 font-size: 15px;
-                font-family: 'Goudy Bookletter 1911', Georgia, Times, sans-serif;
+                font-family: 'Lato', sans-serif;
+                font-weight: bold;
                 cursor: pointer;
                 text-align: center;
                 text-decoration: none;
                 outline: none;
                 color: #fff;
-                background-color: rgb(181, 44, 13);
+                background-color: #a43131;
                 border: none;
                 border-radius: 15px;
                 box-shadow: 0 5px black;
             }
 
-            .btn:hover {background-color: #9f0e0e}
+            .btn:hover {background-color: #932424}
 
             .btn:active {
-                background-color: #9f0e0e;
+                background-color: #932424;
                 box-shadow: 0 2px black;
                 transform: translateY(4px);
             }
-    </style> -->
+    </style>
   </head>
 
   <body>
@@ -54,11 +56,11 @@
     font-size: 40px; top: -30px; position: relative; bottom: 50%;">
         AUTO REPAIR</h1>
 
-        <!-- <div style="text-align: center; position: relative; bottom: 90%;">
+        <div style="text-align: center; position: relative; bottom: 90%;">
             <button  class="btn" type="submit" onclick="window.location.href='/client/index.html';"
             style="margin-left: auto; margin-right: auto; position: relative;
-                    width: 15%; top: -20px; height: 7%; bottom: 100%;">BACK TO HOME</button>
-        </div> -->
+                    width: 15%; top: -17px; height: 7%; bottom: 100%;">VIEW DATA</button>
+        </div>
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
