--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -20,7 +20,7 @@
 
     <script src="/js/scouts.js"></script>
     <script src="/js/customers.js"></script>
-    <script src="/js/phoneNumbers.js"></script>
+    <!-- <script src="/js/phoneNumbers.js"></script> -->
     <script src="/js/cars.js"></script>
 
     <style>
@@ -68,7 +68,7 @@
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
     <div style="margin: 30px; position: relative" id="CustomerTableContainer"></div>
-    <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div>
+    <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
     <div style="margin: 30px; position: relative" id="CarTableContainer"></div>
   </body> 
 </html>
