--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -67,9 +67,9 @@
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
-    <div style="margin: 30%; position: relative" id="CustomerTableContainer"></div>
+    <div style="margin-left: 30%; margin-right: 30%; position: relative" id="CustomerTableContainer"></div>
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
-    <div style="margin: 30%; position: relative" id="CarTableContainer"></div>
+    <div style="margin-left: 30%; margin-right: 30%; position: relative" id="CarTableContainer"></div>
   </body> 
 </html>
 
