add top and bottom margins

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -67,9 +67,13 @@
 
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
-    <div style="margin-left: 200px; margin-right: 200px; position: relative" id="CustomerTableContainer"></div>
+    <div style="margin-left: 200px; margin-right: 200px; 
+    margin-top: 50px; margin-bottom: 50px;
+    position: relative" id="CustomerTableContainer"></div>
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
-    <div style="margin-left: 200px; margin-right: 200px; position: relative" id="CarTableContainer"></div>
+    <div style="margin-left: 200px; margin-right: 200px; 
+    margin-top: 50px; margin-bottom: 50px;
+    position: relative" id="CarTableContainer"></div>
   </body> 
 </html>
 
