--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -21,7 +21,7 @@
     <script src="/js/scouts.js"></script>
     <script src="/js/customers.js"></script>
     <!-- <script src="/js/phoneNumbers.js"></script> -->
-    <script src="/js/cars.js"></script>
+    <!-- <script src="/js/cars.js"></script> -->
 
     <style>
             .btn {
@@ -70,10 +70,13 @@
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
     position: relative" id="CustomerTableContainer"></div>
+
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
-    <div style="margin-left: 200px; margin-right: 200px; 
+
+    <!-- <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="CarTableContainer"></div>
+    position: relative" id="CarTableContainer"></div> -->
+
   </body> 
 </html>
 
