add Repair table

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -20,6 +20,7 @@
 
     <script src="/js/scouts.js"></script>
     <script src="/js/customers.js"></script>
+    <script src="/js/repairs.js"></script>
     <!-- <script src="/js/phoneNumbers.js"></script> -->
     <!-- <script src="/js/cars.js"></script> -->
 
@@ -73,9 +74,9 @@
 
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
 
-    <!-- <div style="margin-left: 200px; margin-right: 200px; 
+    <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="CarTableContainer"></div> -->
+    position: relative" id="RepairTableContainer"></div>
 
   </body> 
 </html>
