add Mechanic table

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -78,6 +78,10 @@
     margin-top: 50px; margin-bottom: 50px;
     position: relative" id="RepairTableContainer"></div>
 
+<div style="margin-left: 200px; margin-right: 200px; 
+margin-top: 50px; margin-bottom: 50px;
+position: relative" id="MechTableContainer"></div>
+
   </body> 
 </html>
 
