add mechanics JS script to front end

--- a/code/java/troop/static/client/index.html
+++ b/code/java/troop/static/client/index.html
@@ -21,6 +21,7 @@
     <script src="/js/scouts.js"></script>
     <script src="/js/customers.js"></script>
     <script src="/js/repairs.js"></script>
+    <script src="/js/mechanics.js"></script>
     <!-- <script src="/js/phoneNumbers.js"></script> -->
     <!-- <script src="/js/cars.js"></script> -->
 
@@ -78,9 +79,9 @@
     margin-top: 50px; margin-bottom: 50px;
     position: relative" id="RepairTableContainer"></div>
 
-<div style="margin-left: 200px; margin-right: 200px; 
-margin-top: 50px; margin-bottom: 50px;
-position: relative" id="MechTableContainer"></div>
+    <div style="margin-left: 200px; margin-right: 200px; 
+    margin-top: 50px; margin-bottom: 50px;
+    position: relative" id="MechTableContainer"></div>
 
   </body> 
 </html>
