--- a/code/java/troop/static/client/repairInfo.html
+++ b/code/java/troop/static/client/repairInfo.html
@@ -68,9 +68,9 @@
     <!-- Click <a href="/client/activeScouts.html">here for the active scouts page</a>.<br/><br/> -->
     <!-- <div id="ScoutTableContainer"></div> -->
     
-    <!-- <div style="margin-left: 200px; margin-right: 200px; 
+    <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="RepairInfoTableContainer"></div> -->
+    position: relative" id="RepairInfoTableContainer"></div>
 
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
 
