--- a/code/java/troop/static/client/repairInfo.html
+++ b/code/java/troop/static/client/repairInfo.html
@@ -18,10 +18,7 @@
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
-    <script src="/js/scouts.js"></script>
-    <script src="/js/customers.js"></script>
-    <script src="/js/repairs.js"></script>
-    <script src="/js/mechanics.js"></script>
+    <script src="/js/repairInfo.js"></script>
     <!-- <script src="/js/phoneNumbers.js"></script> -->
     <!-- <script src="/js/cars.js"></script> -->
 
