change name of html files

--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -60,7 +60,7 @@
         AUTO REPAIR</h1>
 
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button  class="repairs_button" type="submit" onclick="window.location.href='/client/index.html';"
+        <button  class="repairs_button" type="submit" onclick="window.location.href='/client/home.html';"
         style="margin-left: auto; margin-right: auto; position: relative;
                 width: 15%; top: -17px; height: 7%; bottom: 100%;">HOME</button>
     </div>
