--- a/code/java/troop/static/index.html
+++ b/code/java/troop/static/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-    location.href='/client/index.html';
+    location.href='/client/home.html';
     </script>
   </head>
 
