--- a/code/java/troop/static/client/repairInfo.html
+++ b/code/java/troop/static/client/repairInfo.html
@@ -13,17 +13,15 @@
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
 
     <!-- Include one of jTable styles. -->
-    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/blue/jtable.css" rel="stylesheet" type="text/css" />
+    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/crimson/jtable.css" rel="stylesheet" type="text/css" />
  
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
     <script src="/js/repairInfo.js"></script>
-    <!-- <script src="/js/phoneNumbers.js"></script> -->
-    <!-- <script src="/js/cars.js"></script> -->
 
     <style>
-            .repairs_button {
+            .home_button {
                 display: inline-block;
                 padding: 15px 25px;
                 font-size: 15px;
@@ -39,8 +37,8 @@
                 border-radius: 15px;
                 box-shadow: 0 5px black;
             }
-            .repairs_button:hover {background-color: #932424}
-            .repairs_button:active {
+            .home_button:hover {background-color: #932424}
+            .home_button:active {
                 background-color: #932424;
                 box-shadow: 0 2px black;
                 transform: translateY(4px);
@@ -57,7 +55,7 @@
         AUTO REPAIR</h1>
 
     <div style="text-align: center; position: relative; bottom: 90%;">
-        <button  class="repairs_button" type="submit" onclick="window.location.href='/client/home.html';"
+        <button  class="home_button" type="submit" onclick="window.location.href='/client/home.html';"
         style="margin-left: auto; margin-right: auto; position: relative;
                 width: 15%; top: -17px; height: 7%; bottom: 100%;">HOME</button>
     </div>
