add semicolon after style for containers

--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -20,8 +20,6 @@
 
     <script src="/js/scouts.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <style>
             .home_button {
                 display: inline-block;
@@ -45,6 +43,7 @@
                 box-shadow: 0 2px black;
                 transform: translateY(4px);
             }
+
     </style>
   </head>
 
@@ -67,9 +66,9 @@
     
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="estimate_container">
+    position: relative; color:white; border: 1px dotted gray;" id="estimate_container">
 
-
+        
 
     </div>
 
