--- a/code/java/troop/static/client/home.html
+++ b/code/java/troop/static/client/home.html
@@ -104,17 +104,17 @@
     <!-- <div id="ScoutTableContainer"></div> -->
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="CustomerTableContainer"></div>
+    position: relative;" id="CustomerTableContainer"></div>
 
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
 
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="RepairTableContainer"></div>
+    position: relative;" id="RepairTableContainer"></div>
 
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="MechTableContainer"></div>
+    position: relative;" id="MechTableContainer"></div>
 
   </body> 
 </html>
