--- a/code/java/troop/static/client/repairInfo.html
+++ b/code/java/troop/static/client/repairInfo.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
 
     <!-- Include one of jTable styles. -->
-    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/crimson/jtable.css" rel="stylesheet" type="text/css" />
+    <link href="http://www.jtable.org/Scripts/jtable/themes/metro/blue/jtable.css" rel="stylesheet" type="text/css" />
  
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
@@ -65,7 +65,7 @@
     
     <div style="margin-left: 200px; margin-right: 200px; 
     margin-top: 50px; margin-bottom: 50px;
-    position: relative" id="RepairInfoTableContainer"></div>
+    position: relative;" id="RepairInfoTableContainer"></div>
 
     <!-- <div style="margin: 30px; position: relative" id="PhoneTableContainer"></div> -->
 
