--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -136,7 +136,7 @@
 
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
-        <form style="text-align: center;" action="/get-estimates" method="post">
+        <form style="text-align: center;" action="/get-estimates" method="GET">
             <label class="container">One
                 <input style="position: relative; right: 5%;" type="checkbox" checked="checked">
                 <span class="checkmark"></span>
