test repair names get request

--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -18,7 +18,7 @@
     <!-- Include jTable script file. -->
     <script src="http://www.jtable.org/Scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
 
-    <script src="/js/scouts.js"></script>
+    <script src="/js/estimates.js"></script>
 
     <style>
             .home_button {
@@ -137,8 +137,8 @@
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
         <form style="text-align: center;" action="/get-estimates" method="GET">
-            <label class="container">Brakes
-                <input type="checkbox" name="repair1" value="brakes">
+              <label class="container">Brakes
+                <input type="checkbox" name="1" value="brakes">
                 <span class="checkmark"></span>
               </label>
               <label class="container">Transmission
