test dynamic form creation

--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -138,8 +138,8 @@
 
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
-        <form style="display:inline-block;" action="/get-estimates" method="GET">
-              <label class="container">Brakes
+        <form id="estimate_form" style="display:inline-block;" action="/get-estimates" method="GET">
+              <!-- <label class="container">Brakes
                 <input type="checkbox" name="1" value="brakes">
                 <span class="checkmark"></span>
               </label>
@@ -155,7 +155,7 @@
                 <input type="checkbox" name="repair4" value="flywheel">
                 <span class="checkmark"></span>
               </label>
-              <input type="submit" value="Submit">
+              <input type="submit" value="Submit"> -->
         </form>
     </div>
 
